# mv-mietzinsrechner

./: Dockerfile  dev-requirements.txt  docker-compose.yml  pyproject.toml  requirements.in  requirements.txt  update_deps.sh
core/: celery.py  settings.py  urls.py
locale/fr/LC_MESSAGES/: django.po
rechner/: admin.py  datasource.py  forms.py  models.py  services.py  steps.py  tasks.py  urls.py  views.py  wizard.py
rechner/locale/fr/LC_MESSAGES/: django.po
rechner/management/commands/: update_data.py
rechner/migrations/: 0001_initial.py  0002_month.py
rechner/templates/admin/: base.html
rechner/templates/rechner/: base.html  result.html  test_view.html  wizard.html
rechner/tests/: test_calculation.py  test_datasource.py
