[project]
name = "mv-mietzinsrechner-api"
version = "0.0.1"
dependencies = [
    "cachetools",
    "celery[redis]",
    "django",
    "django-celery-beat",
    "django-celery-results",
    "django-environ",
    "django-formtools<2.4",
    "django-import-export",
    "django-model-utils",
    "django-sesame[ua]",
    "django-stubs-ext",
    "djangorestframework",
    "lxml",
    "numba",
    "numba",
    "numpy",
    "openpyxl",
    "pandas",
    "psutil",
    "psycopg2-binary",
    "pymemcache",
    "sentry-sdk",
    "tablib",
    "uvicorn[standard]",
    "whitenoise[brotli]",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.optional-dependencies]
dev = [
    "bandit",
    "django-stubs",
    "django-stubs-ext",
    "djangorestframework-stubs",
    "isort",
    "mypy",
    "pytest",
    "rope",
    "toml",
    "types-cachetools",
    "types-cryptography",
    "yapf",
]

[tool.mypy]
plugins = ["mypy_django_plugin.main"]
python_version = 3.10
check_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true

[tool.django-stubs]
django_settings_module = "core.settings"


[tool.flake8]
max-line-length = 100
exclude = ".tox,.git,*/migrations/*,*/static/CACHE/*,docs,node_modules,venv"

[tool.yapf]
based_on_style = "pep8"
column_limit = 100

[tool.isort]
multi_line_output = 3
include_trailing_comma = true


[tool.pycodestyle]
max-line-length = 120
exclude = ".tox,.git,*/migrations/*,*/static/CACHE/*,docs,node_modules,venv"

